[project]
name = "voice-agent"
version = "0.1.0"
description = "Voice agent with Kokoro TTS and Perplexity Sonar LLM"
authors = [
    {name = "User"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
